# tanstack-demo-backend

./: .sqlfluffignore  README.md  pyproject.toml  ruff.toml
app/: __init__.py  dependencies.py  main.py
app/core/: config.py  errors.py  passwords.py  security.py  tokens.py
app/db/: __init__.py  migrate.py  schema.sql  seed.py  session.py
app/db/migrations/: 001_initial.sql
app/domain/: __init__.py  auth.py  submission.py
app/mappers/: __init__.py  auth_mapper.py  dashboard_mapper.py  submission_mapper.py
app/read_models/: __init__.py  dashboard.py
app/repositories/: __init__.py  auth_repository.py  dashboard_repository.py  submission_repository.py
app/routers/: auth.py  dashboard.py  submissions.py
app/schemas/: auth.py  common.py  dashboard.py  submission.py
app/services/: auth_service.py  dashboard_service.py  submission_service.py
app/stores/: submission_store.py
tests/: conftest.py  test_app_lifecycle.py  test_auth.py  test_auth_mapper.py  test_auth_repository.py  test_auth_schema.py  test_auth_service.py  test_config.py  test_dashboard.py  test_dashboard_mapper.py  test_dashboard_repository.py  test_db.py  test_dependencies.py  test_errors.py  test_migrate.py  test_migration_001_initial.py  test_passwords.py  test_submission_mapper.py  test_submission_repository.py  test_submission_service.py  test_submissions.py  test_tokens.py
