[project]
name = "tanstack-demo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=9.0.0",
    "ruff>=0.15.15",
    "sqlfluff[rs]>=4.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
